  stays valid for password change or login (if email-require-change=false)
- New concept of explicit master entity definitions with details made up of
  related entities; definitions go in new entity.master element; there are
  new methods in EntityValue, EntityList, and EntityFind to get value Maps
  for the master record plus all details
- Various improvements to email message polling (calling EM-ECA rules)
  including support for Java System Properties pass through and fix for
  password pass through for IMAPS/etc
- Email ECA structure significantly improved, for details see the
  org.moqui.EmailServices.process#EmailEca service interface
- Improved sending EmailTemplate with support for reply to and bounce
  addresses from EmailTemplate and CC/BCC addresses from both EmailTemplate
  and service parameters
- Localized strings may now contain a double hash (##) to specify context
  where a single word in the default language (ie English) is ambiguous; at
  runtime if no matching LocalizedMessage is found the text before the
  double hash will be used to lookup records or as the default value
- Added field.@create-only attribute, defaults to entity.@create-only
  value, create only now checked at field level on update (only at entity
  level on delete)
- When a form-single is rendered the form map is added to a pushed
  (isolated) context and popped after; field values can now be referenced
  directly in expressions in @condition, @text, etc attributes
- All XML Form field widgets now support expanded tooltip
- Added json-schema for Entity REST API: for all entities get
  /rest/schema.json, for a single entity get /rest/schema/${name}.json
- Added RAML API definition for Entity REST API at /rest/schema.raml
- SystemMessage entity has additional fields to identify messages
- Changed receive#SystemMessage to an interface, now use
  receive#IncomingSystemMessage for remote calls, will call the